# cfcc

./: README.md  config.toml  pyproject.toml  test.html
src/: CodeForces.py  CodeforcesRequestHandler.py  cli.py  test.py
src/Codeforces/: Codeforces.py  CodeforcesRequester.py  CodeforcesSubmissionTable.py  CodeforcesTextParser.py
src/beautifier/: errors.py  submission_table.py  test_case.py
src/cli_commands/: generate_problem.py  problem_test.py
src/utils/: default_template.cpp  file_managment.py  language_to_program_id.py  lower_upper_index_translator.py  program_configs.py
