[project]
name = "cfcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "browser-cookie3>=0.20.1",
    "dacite>=1.9.2",
    "httpx>=0.28.1",
    "pycookiecheat>=0.8.0",
    "pylatexenc>=2.10",
    "rich>=14.3.3",
    "tomlkit>=0.14.0",
    "typer>=0.24.1",
    "yaspin>=3.4.0",
]

[project.scripts]
cfcc = "cli:app"
